--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,6 @@
-#Fri May 13 12:26:09 CEST 2011
+#Mon May 16 13:51:25 CEST 2011
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.9-rc-3
 zipStorePath=wrapper/dists
-urlRoot=http\://dist.codehaus.org/gradle
-distributionName=gradle
-distributionClassifier=bin
+distributionUrl=http\://repo.gradle.org/gradle/distributions/gradle-1.0-milestone-3-bin.zip
