--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,24 @@ dependsOnChildren()
 	compile("se.scalablesolutions.akka:akka-remote:$akkaVersion")
     compile "com.google.guava:guava:$guavaVersion"
 
+    // Akka remote dependencies
+	compile 'org.scala-lang:scala-library:2.9.0'
+	compile 'com.google.protobuf:protobuf-java:2.3.0'
+	compile 'voldemort.store.compress:h2-lzf:1.0'
+	compile 'org.codehaus.jackson:jackson-mapper-asl:1.7.1'
+
+	compile 'commons-io:commons-io:2.0.1'
+	compile 'org.guiceyfruit:guice-all:2.0'
+	compile 'net.debasishg:sjson_2.9.0:0.11'
+	compile 'org.jboss.netty:netty:3.2.3.Final'
+	compile 'commons-codec:commons-codec:1.4'
+	compile 'se.scalablesolutions.akka:akka-typed-actor:1.2-SNAPSHOT'
+
+    // Akka typed actor dependencies
+    compile 'org.codehaus.aspectwerkz:aspectwerkz:2.2.3'
+    compile 'aopalliance:aopalliance:1.0'
+    compile 'se.scalablesolutions.akka:akka-stm:1.2-SNAPSHOT'
+
   }
   task wrapper(type: Wrapper) {
     gradleVersion = '1.0-milestone-3'
